fix, gmail,apple login api, calendar, note save fix
